--- a/index.html
+++ b/index.html
@@ -2,66 +2,126 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Car Musc</title>
-    <meta name="keywords" content="Pax Template">
-    <meta name="description" content="We are the best and we know it!">
-    <link rel="shortcut icon" href="images/15.png">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Car Musc</title>
+  <meta name="keywords" content="Pax Template">
+  <meta name="description" content="We are the best and we know it!">
+  <link rel="shortcut icon" href="images/15.png">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<div class="first">
-  <header class="header">
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#">Главная</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Оклейка автомобилей</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Детейлинг автомобилей</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Галерея работ</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-      
-  </header>
-</div>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-
-<main>
-  <section1>
-    <div class="container">
-      <h1>CAR MUSC</h1>
+  <div class="content">
+    <div class="row overview">
+      <div class="column">
+        <header class="header">
+          <nav class="navbar navbar-expand-lg">
+            <div class="container">
+              <a class="navbar-brand" href="#">Главная</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Оклейка автомобилей</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Детейлинг автомобилей</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Галерея работ</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </header>
+      </div>
     </div>
-  </section1>
-  <section2></section2>
-  <section3></section3>
-  <section4></section4>
-  <section5></section5>
-  <section6></section6>
-  <section7></section7>
-  <section8></section8>
-  <section9></section9>
-  <section10></section10>
-</main>
 
+    <div class="row overview">
+      <div class="column">
+        <div class="col-12">
+          <h1 class="main-title">CAR MUSC</h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="row overview">
+      <div class="column">
+        <div class="col-12 diamonds">
+          <img src="images/1.png" alt="1">
+          <img src="images/2.png" alt="2">
+          <img src="images/3.png" alt="3">
+          <img src="images/4.png" alt="4">
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row overview">
+      <div class="column">
+        <div class="col-12 text-center greetings">
+          <p class="gs">
+            Lorem ipsum dolor sit amet, consectetur<br>
+            adipiscing elit. Vitae orci urna amet penatibus.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row overview">
+      <div class="column">
+        <div class="col-12 text-center btn-ss">
+          <a href="#">
+            <img src="images/button-services.png">
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid info">
+      <div class="row">
+        <div class="col-4 text-center border1">
+          <h3>АДРЕС:</h3>
+          <p>Lorem ipsum dolor sit amet, <br>
+            consectetur adipiscing elit</p>
+        </div>
+        <div class="col-4 text-center border2">
+          <div class="phone-info">
+            <h3>ТЕЛЕФОН:</h3>
+            <a class="phone" href="tel:88121234567">8 (812) 123-45-67</a><br>
+            <a class="phone" href="tel:89111234567">8-911-123-45-67</a>
+          </div>
+        </div>
+        <div class="col-4 text-cente border3">
+          <h3>РЕЖИМ РАБОТЫ:</h3>
+          <p>пн-пт : 10:00 - 20:00<br>
+            сб-вск : 12:00 - 20:00
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="column">
+
+      </div>
+    </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
